fix: spacing on desktop

--- a/src/startskudd/components/buttons/buttons.module.css
+++ b/src/startskudd/components/buttons/buttons.module.css
@@ -39,3 +39,13 @@
   padding: 0.5rem 1rem;
   border-radius: 3rem;
 }
+
+@media (min-width: 1000px) {
+  .menyButton {
+    width: 10rem;
+  }
+
+  .accordianButton {
+    width: 30rem;
+  }
+}
