--- a/src/startskudd/components/flexBox/flexbox.module.css
+++ b/src/startskudd/components/flexBox/flexbox.module.css
@@ -10,6 +10,5 @@
 @media (min-width: 1000px) {
   .flexbox {
     margin-top: 0;
-    min-width: 483px;
   }
 }
